--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,7 @@ body {
 .wrap {
     max-width: 1170px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .page-main {   
@@ -53,9 +54,11 @@ body {
     justify-content: space-between;
     align-items: center;
     max-width: 1170px;
-    margin: 0 auto;
-    padding-top: 33px;
-    padding-bottom: 163px;
+    margin: 0 auto;    
+    padding: 33px 15px 163px 15px;
+    @media(max-width:945px) {
+        flex-direction: column;
+    }
     &__logo {
         display: block;
         width: 137px;
@@ -89,15 +92,21 @@ body {
 }
 
 .block-text {
-    flex-basis: calc(92% - 500px);    
+    flex-basis: calc(92% - 500px);
+    @media(max-width:1020px) {
+        flex-basis: calc(92% - 315px);
+    }   
     &_events {
         flex-basis: calc(92% - 506px);
+        @media(max-width:1020px) {
+            flex-basis: calc(92% - 315px);
+        } 
     }   
     &__name {
         font-family: 'Open Sans', serif;
         font-size: 18px;
         letter-spacing: 0.85px;
-        margin-bottom: 43px;
+        margin-bottom: 28px;
         margin-left: 2px;
         &_top {
             margin-top: 15px;
@@ -115,13 +124,15 @@ body {
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1.8px;
-        margin-bottom: 38px;        
+        margin-bottom: 38px;
+        line-height: 53px;       
         span {
             display: block;
             font-size: 18px;
             color: $accent-color;
-            margin-top: 24px;
+            margin-top: 10px;
             letter-spacing: 0.9px;
+            line-height: 24px;
         }
         &_events {
             span {
@@ -209,6 +220,10 @@ body {
 
 .page {
     padding: 160px 0 160px 0;
+    position: relative;
+    @media(max-width: 1020px){       
+        padding: 120px 0 120px 0;
+     }
     &_gray {
         background-color: $bg-light-color;
         padding: 163px 0 240px 0;
@@ -283,11 +298,33 @@ body {
             padding: 13px 0 17px 0;
         }
     }
-    &-events {
+    &_other {
+        padding-top: 162px;
+    }
+    &_carousel {
+        padding: 218px 0 215px 0;
+        @media(max-width: 1020px){
+           background-color: $bg-dark-color;           
+        } 
+    }
+    &_events {
         padding: 160px 0 174px 0;
     }
     &_blog {
         padding: 166px 0 159px 0;
+    }
+    &__svg {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: -1;
+            min-height: 800px;
+            @media(max-width: 1020px){
+                display: none;
+            }   
+    }
+    &_letter {
+        padding-bottom: 154px;
     }
 }
 
@@ -302,6 +339,10 @@ body {
         position: absolute;
         right: 0;
         z-index: -1;
+        @media(max-width:1020px) {
+            width: 300px;
+            height: 412px;
+         }
         &_left {
             left: 0;
         }
@@ -309,6 +350,9 @@ body {
     &__img {
         margin-top: 48px;
         margin-right: 45px;
+        @media(max-width:1020px) {
+           width: 300px;
+        }
         &_left {
             margin-right: 0;
             margin-left: 50px;
@@ -321,10 +365,16 @@ body {
     display: flex;
     justify-content: space-around;
     margin-top: 211px;
+    @media(max-width:750px) {
+        flex-direction: column;
+    }
     p {
         font-family: 'Open Sans', serif;
         font-size: 18px;        
         text-align: center;
+        @media(max-width:750px) {
+            margin-bottom: 80px;
+        }
         span {
             display: block;
             font-family: 'Roboto Slab', serif;
@@ -340,11 +390,19 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 83px;
+    @media(max-width:1020px) {
+        flex-direction: column;
+        margin: 83px auto 0 auto;
+        max-width: 750px;
+    }
     .subtitle {
         margin-bottom: 20px;
     }    
     &-text {
-        flex-basis: 41%;
+        flex-basis: calc(100% - 690px);
+        @media(max-width:1020px) {
+            flex-basis: 100%;
+        }  
         &__desc{
             font-family: 'Open Sans', serif;            
         }
@@ -376,12 +434,17 @@ body {
         }
     }    
     &-table {
-        flex-basis: 49%;        
+        flex-basis: 570px;
+        @media(max-width:1020px) {
+            flex-basis: 100%;
+            margin-top: 40px;
+        }       
         &__list {
             margin: 25px 0 0 0;
             padding: 0;
             counter-reset: list;
             column-count: 2;
+            column-gap: 24px;
             &>li {
                 counter-increment: list;
                 list-style-type: none;
@@ -470,6 +533,17 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 85px;
+    @media(max-width:900px) {
+        flex-direction: column;
+        max-width: 500px;
+        margin: 45px auto 0 auto;
+    }
+    &-item {
+        flex-basis: 31.5%;
+        @media(max-width:900px) {
+            margin-bottom: 40px;            
+        }
+    }
     h4 {
         font-size: 18px;
         font-weight: 700;
@@ -477,29 +551,31 @@ body {
         margin-bottom: 3px;
         margin-top: 16px;
     }
-    &-info {
-        display: inline-block;
+    &-info {        
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
         font-family: 'Open Sans', serif;
         font-size: 15px;        
         a {
+            display: inline-block;
             text-decoration: none;
             color: $accent-color;
-            span {
+            span {               
                 color: $text-color;
             }
         }    
     }
     &__desc {
-        margin-top: 12px;
-        width: 369px;
+        margin-top: 12px;       
     }
     &-img {
         position: relative;
-        width: 369px;
+        width: 100%;
         height: 224px;
         overflow: hidden;
         img {
-            width: 369px;
+            width: 100%;
             height: 224px;
             position: absolute;
             left: 50%;
