--- a/src/views/index.html
+++ b/src/views/index.html
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="page">
+		<div class="page page_other">
 			<div class="wrap">
 				<h2 class="page__title">Other Books</h2>
 				<p class="page__subtitle">Some books you might be interested in</p>
@@ -168,7 +168,7 @@
 				<a href="#" class="page__btn page__btn_other">Browse all books</a>
 			</div>
 		</div>
-		<div class="page">
+		<div class="page page_carousel">
 			<div class="wrap">
 				<div class="block-carousel">
 					<div>
@@ -200,8 +200,9 @@
 					</div>
 				</div>
 			</div>
+			<svg class="page__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1601 849"><path d="M0 0l802 61 799-61v789l-799 60L0 789V0z" fill="#44444f" fill-rule="evenodd"/></svg>
 		</div>
-		<div class="page page-events">
+		<div class="page page_events">
 			<div class="wrap">
 				<div class="block-author">
 					<div class="block-ava">
@@ -242,7 +243,7 @@
 						<div class="block-blog-img"><img src="../img/blog-img-1.png" alt=""></div>
 						<h4>Importance of light in photography</h4>
 						<div class="block-blog-info">
-							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">June 20<span>, </span>2018</a></p>
+							<p><a href="#"><span>By </span>Emma Anderson</a><span> - </span><a href="#">June 20<span>, </span>2018</a></p>
 							<p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
 						</div>
 					</div>
@@ -250,7 +251,7 @@
 						<div class="block-blog-img"><img src="../img/blog-img-2.png" alt=""></div>
 						<h4>The tools you need for the perfection</h4>
 						<div class="block-blog-info">
-							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">June 25<span>, </span>2018</a></p>
+							<p><a href="#"><span>By </span>Emma Anderson</a><span> - </span><a href="#"> June 25<span>, </span>2018</a></p>
 							<p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
 						</div>
 					</div>
@@ -258,7 +259,7 @@
 						<div class="block-blog-img"><img src="../img/blog-img-3.png" alt=""></div>
 						<h4>Knowing the difference is important</h4>
 						<div class="block-blog-info">
-							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">August 22<span>, </span>2018</a></p>
+							<p><a href="#"><span>By </span>Emma Anderson</a><span> - </span><a href="#"> August 22<span>, </span>2018</a></p>
 							<p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
 						</div>
 					</div>
@@ -266,7 +267,7 @@
 				<a href="#" class="page__btn page__btn_blog">Read more in the blog</a>
 			</div>
 		</div>
-		<div class="page">
+		<div class="page page_letter">
 			<div class="wrap">
 				<div class="block-letter">
 					<div class="block-letter-item">
@@ -280,7 +281,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer">
+		<div class="page footer">
 			<div class="wrap">
 				<div class="block-footer">
 					<div>
